Revision history for Test-WWW-Mechanize

WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
bug tracking.  They are now being tracked via GitHub at
https://github.com/petdance/test-www-mechanize/issues


NEXT
------------------------------------
[FIXES]
Removed some code that only runs on Perl 5.10+.

Add check_all_images_ok(). (GH #17)

[DOCUMENTATION]
Fixed some incorrect docs. Thanks, Daniel Böhmer.

[INTERNALS]
Require Perl 5.10.

Explicitly requires HTTP::Message 6.29 or higher.


1.54    Tue Dec  8 23:25:06 CST 2020
------------------------------------
[ENHANCEMENTS]
Use ok() instead of cmp_ok() inside of lacks_uncapped_inputs().
This output makes more sense.

lacks_uncapped_inputs() now has a a default message if one isn't supplied.

[FIXES]
Fixed the subtest name inside of C<lacks_ids_ok>.

Fixed the minimum version of Carp::Assert::More in Makefile.PL.


1.52    Wed Dec  5 10:00:56 CST 2018
------------------------------------
[ENHANCEMENTS]
click_ok() method can now take a button with X/Y coordinates.
Thanks to GitHub user @marderh.  (GH #45)

Added the ability to modify the HTML that the html_tidy_ok() validates.
See the content_for_validation() method. (GH #61)

Add a set of methods for existence of IDs: id_exists(), id_exists_ok(),
ids_exist_ok(), lacks_id_ok() and lacks_ids_ok(). (GH #48)

Add button_exists(), button_exists_ok() and lacks_button_ok()
methods.  (GH #50)

[FIXES]
Clarified warnings to make it clear that certain modules are
optional. Thanks, Matthew Chae.


1.50    Mon Apr 16 15:16:59 CDT 2018
------------------------------------
[FIXES]
Added html_tidy_ok() methods, analogous to html_lint_ok().

Remove unnecessary dependency on HTML::TreeBuilder.  Thanks, Kent Fredric.


1.49_01 Mon Mar 26 10:58:51 CDT 2018
------------------------------------
[ENHANCEMENTS]
Adding autotidy functionality. autotidy lets you validate every page that
Mech gets using the HTML::Tidy5 module, just like the autolint feature